# Mint

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
docs/: TODO  TODO.txt
docs/design/: overview.txt
docs/notes/: capabilities.txt  compile_runtime.txt  comptime  comptime.txt  custom_backend.txt  functions.txt  main.txt  mir.txt  modules.txt  multithreading_compilation.txt  optimizations.txt  principles.txt  project_layout.txt  self_hosting.txt  semantics.txt  test_terms.txt  use_before_def.txt
docs/notes/modules/: design  design.txt
include/adt/: Argument.hpp  Array.hpp  AstAllocator.hpp  AstInterner.hpp  Attributes.hpp  BinopTable.hpp  DirectorySearch.hpp  Environment.hpp  Error.hpp  Identifier.hpp  IdentifierSet.hpp  ImportSet.hpp  InputStream.hpp  InsertionPoint.hpp  List.hpp  Map.hpp  Module.hpp  Recoverable.hpp  Result.hpp  Scope.hpp  Set.hpp  SourceBuffer.hpp  SourceBufferList.hpp  SourceFile.hpp  SourceFiles.hpp  SourceLocation.hpp  StringSet.hpp  SyncQueue.hpp  ThreadPool.hpp  TranslationUnit.hpp  TypeInterner.hpp  UniqueFile.hpp  UniqueFiles.hpp  UnopTable.hpp  UseBeforeDefMap.hpp  UseBeforeDefNames.hpp  VectorMap.hpp  VectorSet.hpp
include/ast/: All.hpp  Ast.hpp  AstFwd.hpp  Clone.hpp  Definition.hpp  Equals.hpp  Evaluate.hpp  Let.hpp  Nil.hpp  Print.hpp  Typecheck.hpp  Value.hpp
include/ast/definition/: Definition.hpp  Function.hpp  Let.hpp
include/ast/expression/: Binop.hpp  Call.hpp  Expression.hpp  Parens.hpp  Unop.hpp  Variable.hpp
include/ast/semantics/: Binop.hpp  Import.hpp  Module.hpp  Semantics.hpp  Unop.hpp  Variable.hpp
include/ast/statement/: Import.hpp  Module.hpp  Statement.hpp
include/ast/syntax/: Affix.hpp  Parens.hpp  Syntax.hpp  Term.hpp
include/ast/value/: Boolean.hpp  Integer.hpp  Lambda.hpp  Nil.hpp  Value.hpp
include/ast/visitors/: HasSideEffect.hpp  Print.hpp
include/codegen/: Allocate.hpp  LLVMUtility.hpp
include/comptime/: Codegen.hpp  Compile.hpp  Emit.hpp  Evaluate.hpp  Import.hpp  Link.hpp  Repl.hpp  Typecheck.hpp
include/core/: Codegen.hpp  Compile.hpp  Core.hpp  Emit.hpp  Evaluate.hpp  Import.hpp  Parse.hpp  Repl.hpp  Typecheck.hpp
include/error/: Error.hpp  Result.hpp
include/ir/: All.hpp  Instruction.hpp  Mir.hpp
include/ir/action/: Clone.hpp  Print.hpp
include/ir/definition/: Function.hpp  Let.hpp
include/ir/detail/: Base.hpp  Immediate.hpp  Index.hpp  IrBase.hpp  Parameter.hpp  Scalar.hpp
include/ir/expression/: Binop.hpp  Call.hpp  Unop.hpp
include/ir/questions/: IsDefinition.hpp
include/ir/statement/: Import.hpp  Module.hpp
include/ir/syntax/: Affix.hpp  Parens.hpp
include/ir/value/: Lambda.hpp  Parameter.hpp  Scalar.hpp  Value.hpp
include/policies/: UseCreate.hpp
include/runtime/: Allocate.hpp  ForwardDeclare.hpp  InlineAsm.hpp  Load.hpp  Store.hpp
include/runtime/sys/: Exit.hpp
include/scan/: Lexer.hpp  Location.hpp  MirParser.hpp  Parser.hpp  Scanner.hpp  Token.hpp
include/type/: All.hpp  Boolean.hpp  BooleanType.hpp  Composite.hpp  Equals.hpp  Integer.hpp  IntegerType.hpp  Nil.hpp  NilType.hpp  Print.hpp  Scalar.hpp  Type.hpp  TypeForwardDeclaration.hpp
include/type/composite/: Function.hpp  Lambda.hpp
include/utility/: Abort.hpp  Allocator.hpp  Assert.hpp  Casting.hpp  CommandLineOptions.hpp  Config.hpp  Config.hpp.in  Debug.hpp  FatalError.hpp  LLVMToString.hpp  LLVMUtility.hpp  Log.hpp  ManagedPointer.hpp  NumbersRoundTrip.hpp  Options.hpp  OptionsParser.hpp  PrintLLVM.hpp  Process.hpp  Stringify.hpp  VectorHelpers.hpp  VerifyLLVM.hpp  Version.hpp  VisitorResult.hpp
resources/: dependent.ll  functions.ll  functions.mi  main  main.mi  module.ll  module.mi  scratch.ll  scratch.mi
scratch/: function_pointer.c  function_pointer.ll
source/: CMakeLists.txt  a.out  main.cpp
source/adt/: Attributes.cpp  BinopTable.cpp  CMakeLists.txt  DirectorySearch.cpp  Environment.cpp  Error.cpp  Identifier.cpp  ImportSet.cpp  Recoverable.cpp  Scope.cpp  SourceBuffer.cpp  UnopTable.cpp  UseBeforeDefMap.cpp
source/ast/: CMakeLists.txt  Let.cpp  Nil.cpp
source/ast/definition/: Function.cpp  Let.cpp
source/ast/expression/: Binop.cpp  Call.cpp  Unop.cpp  Variable.cpp
source/ast/semantics/: Binop.cpp  Import.cpp  Module.cpp  Unop.cpp  Variable.cpp
source/ast/statement/: Import.cpp  Module.cpp
source/ast/syntax/: Affix.cpp  Parens.cpp
source/ast/value/: Boolean.cpp  Integer.cpp  Lambda.cpp  Nil.cpp
source/ast/visitors/: HasSideEffect.cpp  Print.cpp
source/codegen/: Allocate.cpp  CMakeLists.txt  LLVMUtility.cpp  Load.cpp  Store.cpp
source/comptime/: CMakeLists.txt  Codegen.cpp  Compile.cpp  Emit.cpp  Evaluate.cpp  Import.cpp  Link.cpp  Parse.cpp  Repl.cpp  Typecheck.cpp
source/core/: CMakeLists.txt  Codegen.cpp  Compile.cpp  Core.cpp  Emit.cpp  Evaluate.cpp  Import.cpp  Parse.cpp  Repl.cpp  Typecheck.cpp
source/error/: Error.cpp
source/ir/: CMakeLists.txt  Mir.cpp
source/ir/action/: Clone.cpp  Print.cpp
source/ir/questions/: IsDefinition.cpp
source/ir/statement/: Module.cpp
source/runtime/: Allocate.cpp  CMakeLists.txt  ForwardDeclare.cpp  InlineAsm.cpp  Load.cpp  Store.cpp
source/runtime/sys/: Exit.cpp
source/scan/: CMakeLists.txt  Lexer.cpp  Lexer.re  MirParser.cpp  Parser.cpp  Scanner.cpp  Scanner.re  Token.cpp
source/type/: Boolean.cpp  CMakeLists.txt  Integer.cpp  Nil.cpp  Type.cpp
source/type/composite/: Function.cpp  Lambda.cpp
source/type/scalar/: Boolean.cpp  Integer.cpp  Nil.cpp
source/typecheck/: CMakeLists.txt  Typecheck.cpp
source/utility/: Abort.cpp  Allocator.cpp  CMakeLists.txt  CommandLineOptions.cpp  LLVMUtility.cpp  Log.cpp  VectorHelpers.cpp
test/: CMakeLists.txt  main.cpp
test/include/: Config.hpp  Config.hpp.in  TestExpressions.hpp
test/resources/: dependent.mi  functions.mi  module.mi  module_simple.mi
test/resources/test_files/: arithmetic.mi  exit_code.mi  function.mi  global_variables.mi  import.mi  import_multiple.mi  local_variables.mi  modules.mi
test/resources/test_files/include/: depA.mi  depB.mi  dependency.mi  dependent.mi
test/source/: Array.cpp  CompiledCode.cpp  REPL.cpp
(+19 files in other folders)
